# TU-2506V-ELS

./: LICENSE  README.md
electronics/: README.md  TODO.md
electronics/mcu/: mcu.kicad_pcb  mcu.kicad_pro  mcu.kicad_sch
electronics/pwr_io/: pwr_io.kicad_pcb  pwr_io.kicad_pro  pwr_io.kicad_sch
electronics/ui/: ui.kicad_pcb  ui.kicad_pro  ui.kicad_sch
firmware/: Cargo.toml  README.md  TODO  flash.sh
firmware/doc/: pin-assignments.txt  rpm_ui_sim.py  ui_notes.txt
firmware/src/: control.rs  fir.rs  lcd.rs  main.rs  pulse.rs  userinterface.rs
mechanical/: README.md  lathe_els_panel.FCStd
